<resources>

    <string name="app_name">Student Finance Planner</string>

    <string name="textViewTitle">Welcome to Student Finance Planner</string>

    <string name="buttonProfile">Profile</string>
    <string name="buttonExit">Exit</string>
    <string name="buttonLoan">Loan</string>
    <string name="buttonLivingExpenses">Living Expenses</string>

    <!--Profile Activity String Values -->
    <string name="textViewProfile">Profile Information</string>
    <string name="textViewName">Name : </string>
    <string name="textViewIdentityCard">Identity Card : </string>
    <string name="textViewStudentID">Student ID: </string>
    <string name="textViewBirthDate">Birth Date : </string>
    <string name="textViewYearIntake">Year Intake : </string>
    <string name="textViewEmail">Email : </string>
    <string name="buttonReset">Reset</string>
    <string name="buttonUpdateProfile">Update Profile</string>
    <!--!-->
    <!--UpdateProfileActivity String Values -->
    <string name="buttonUpdate">Update</string>
    <string name="editTextStudentID"></string>
    <string name="editTextEmail"></string>
    <string name="buttonGetLocation"></string>
    <string name="textViewCoordinate"></string>
    <!--UpdateLoanActivity -->
    <string name="buttonUpdateLoanBack_LA">Back</string>

    <!--Loan Activity String Values-->
    <string name="textViewLoanAmount">Loan Amount</string>
    <string name="textViewLoanDuration">Loan Duration</string>
    <string name="textViewPaymentDueDate">Payment Due Date</string>
    <string name="iconLoanType">Loan Type</string>
    <string name="iconLoanDuration">Loan Duration</string>
    <string name="iconPaymentDueDate">Payment Due Date</string>
    <string name="iconBackButton">Back Button</string>
    <string name="textViewIcNumber">IC Number:</string>
    <string name="editTextIcNumber"></string>
    <string name="editTextYearIntake"></string>
    <string name="buttonUpdateLoanInformation">Update Loan</string>

    <!--Loan Information-->

    <string name="editTextLoanAmount">0.00</string>
    <string name="editTextLoanDuration"></string>
    <string name="editTextPaymentDueDate"></string>

    <!--Living Expenses Activity String Values-->
    <string name="textViewExpense">Expenses</string>
    <string name="textViewExpenseValue">0.00</string>
    <string name="editTextExpenseValue">0.00</string>

    <string name="textViewIncome">Income</string>
    <string name="textViewIncomeValue">0.00</string>
    <string name="editTextIncomeValue">0.00</string>

    <string name="textViewBalance">Balance</string>
    <string name="textViewBalanceValue">0.00</string>

    <string name="editTextItemPrice">0.00</string>
    <string name="editTextItemName"></string>
    <string name="editTextItemPrice1">0.00</string>
    <string name="editTextItemName1"></string>
    <string name="editTextItemPrice2">0.00</string>
    <string name="editTextItemName2"></string>
    <string name="editTextItemPrice3">0.00</string>
    <string name="editTextItemName3"></string>
    <string name="editTextItemPrice4">0.00</string>
    <string name="editTextItemName4"></string>
    <string name="spinnerCategory0">Listing</string>
    <string name="spinnerCategory1">Listing</string>
    <string name="spinnerCategory2">Listing</string>
    <string name="spinnerCategory3">Listing</string>
    <string name="spinnerCategory4">Listing</string>
    <string name="spinnerCategory5">Listing</string>
    <string name="editTextItemPrice5">0.00</string>

    <string-array name="Category">
        <item>Food</item>
        <item>Utility</item>
        <item>Hobby</item>
        <item>Entertainment</item>
        <item>Clothes</item>
        <item>Semester Fees</item>
        <item>Rentals</item>
        <item>Others</item>
    </string-array>
    <string name="imageButtonAdd"></string>
    <string name="buttonCalculate">Calculate</string>
    <string name="buttonBack_LEA">Back</string>
    <string name="buttonBack_LA">Back</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>
</resources>
