<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lincolntee.studentfinance.LoanActivity">

    <ImageView
        android:id="@+id/imageViewLoanType"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/iconLoanType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_balance_blue_24dp" />


    <TextView
        android:id="@+id/textViewLoanAmount"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/editTextLoanAmount"
        android:text="@string/textViewLoanAmount"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewLoanType"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <ImageView
        android:id="@+id/imageViewDuration"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/iconLoanDuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLoanType"
        app:srcCompat="@drawable/ic_timeline_blue_24dp" />

    <TextView
        android:id="@+id/textViewLoanDuration"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textViewLoanDuration"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewDuration"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoanAmount" />

    <ImageView
        android:id="@+id/imageViewPaymentDueDate"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/iconPaymentDueDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDuration"
        app:srcCompat="@drawable/ic_timer_off_red_24dp" />

    <TextView
        android:id="@+id/textViewPaymentDueDate"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textViewPaymentDueDate"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewPaymentDueDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/buttonBack_LA"
        android:layout_width="111dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/buttonBack_LA"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonUpdateLoanInformation"
        android:layout_width="121dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/buttonUpdateLoanInformation"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
