<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lincolntee.studentfinance.LoanActivity">

    <ImageView
        android:id="@+id/imageViewLoanType"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/iconLoanType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_balance_blue_24dp" />


    <TextView
        android:id="@+id/textViewLoanAmount"
        android:layout_width="243dp"
        android:layout_height="33dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/editTextLoanAmount"
        android:text="@string/textViewLoanAmount"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toEndOf="@+id/imageViewLoanType"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <ImageView
        android:id="@+id/imageViewDuration"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/iconLoanDuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLoanType"
        app:srcCompat="@drawable/ic_timeline_blue_24dp" />

    <TextView
        android:id="@+id/textViewLoanDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/textViewLoanDuration"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toEndOf="@+id/imageViewDuration"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoanAmount" />

    <ImageView
        android:id="@+id/imageViewPaymentDueDate"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/iconPaymentDueDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDuration"
        app:srcCompat="@drawable/ic_timer_off_red_24dp" />

    <TextView
        android:id="@+id/textViewPaymentDueDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewPaymentDueDate"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageViewPaymentDueDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoanDuration"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/buttonUpdateLoanBack_LA"
        android:layout_width="111dp"
        android:layout_height="62dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/buttonUpdateLoanBack_LA"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonUpdateLoan"
        android:layout_width="121dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/buttonUpdateLoanInformation"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextLoanAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:text="@string/editTextLoanAmount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toEndOf="@+id/imageViewLoanType"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoanAmount"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextLoanDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Duration"
        android:inputType="date"
        android:text="@string/editTextLoanDuration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toEndOf="@+id/imageViewDuration"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoanDuration"
        app:layout_constraintVertical_bias="0.007" />

    <EditText
        android:id="@+id/editTextPaymentDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Due Date"
        android:inputType="date"
        android:text="@string/editTextPaymentDueDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toEndOf="@+id/imageViewPaymentDueDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaymentDueDate" />

</android.support.constraint.ConstraintLayout>
