<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lincolntee.studentfinance.ProfileActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewYearIntake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewIcNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/textViewYearIntake"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="56dp" />

        <TextView
            android:id="@+id/textViewIcNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewStudentID"
            android:layout_marginTop="23dp"
            android:text="@string/textViewIcNumber"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="56dp" />

        <Button
            android:id="@+id/buttonUpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/buttonUpdateProfile"
            android:textColor="@android:color/background_light"
            tools:layout_editor_absoluteX="213dp"
            tools:layout_editor_absoluteY="428dp" />

        <TextView
            android:id="@+id/textViewStudentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewEmail"
            android:layout_marginTop="28dp"
            android:text="@string/textViewStudentID"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="56dp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewName"
            android:layout_marginTop="29dp"
            android:text="@string/textViewEmail"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="56dp" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="34dp"
            android:text="@string/textViewName"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="56dp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
